@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)send.c	2.39 (gritter) 10/21/04";
+static char sccsid[] = "@(#)send.c	2.40 (gritter) 10/24/04";
 #endif
 #endif /* not lint */
 
@@ -616,7 +616,9 @@ const struct message *mp;	/* can be NULL if rewritestatus == 0 */
 				action == CONV_TODISP ?
 					TD_ISPR|TD_ICONV :
 					action == CONV_TOSRCH ?
-						TD_ICONV : TD_NONE,
+						TD_ICONV : 
+					action == CONV_TOFLTR ? 
+						TD_DELNUL : TD_NONE,
 				prefix, prefixlen);
 		addstats(stats, 1, sz);
 	}
@@ -697,7 +699,9 @@ const struct message *mp;	/* can be NULL if rewritestatus == 0 */
 				action == CONV_TODISP ?
 					TD_ISPR|TD_ICONV :
 					action == CONV_TOSRCH ?
-						TD_ICONV : TD_NONE,
+						TD_ICONV :
+					action == CONV_TOFLTR ? 
+						TD_DELNUL : TD_NONE,
 				prefix, prefixlen);
 		if (ferror(obuf))
 			return 1;
@@ -931,9 +935,10 @@ send_multi_midbound:
 					if (action == CONV_QUOTE) {
 						if (b->b_count > 1)
 							goto send_multi_end;
+					} else if (action == CONV_TOFLTR) {
+						putc('\0', obuf);
 					} else if (action != CONV_TOFILE &&
-							action != CONV_TOSRCH &&
-							action != CONV_TOFLTR) {
+							action != CONV_TOSRCH) {
 						fputs(catgets(catd, CATSET, 174,
 							"\nPart "), obuf);
 						print_partnumber(obuf, b, b0,
@@ -1025,6 +1030,8 @@ send_multi_parseheader:
 				/*
 				 * See comment in send_message().
 				 */
+				if (action == CONV_TOFLTR)
+					putc('\0', obuf);
 				goto send_multi_parseheader;
 			}
 			lineno = -1;
@@ -1111,7 +1118,9 @@ send_multi_parseheader:
 						action == CONV_QUOTE ?
 					 TD_ISPR|TD_ICONV :
 					 	action == CONV_TOSRCH ?
-							TD_ICONV : TD_NONE,
+							TD_ICONV :
+						action == CONV_TOFLTR ?
+							TD_DELNUL : TD_NONE,
 					pbuf == qbuf ? prefix : NULL,
 					pbuf == qbuf ? prefixlen : 0);
 				if (pbuf == origobuf)
@@ -1259,7 +1268,9 @@ send_message(struct message *mp, FILE *obuf, struct ignoretab *doign,
 				action == CONV_TODISP ?
 					TD_ISPR|TD_ICONV :
 					action == CONV_TOSRCH ?
-						TD_ICONV : TD_NONE,
+						TD_ICONV :
+					action == CONV_TOFLTR ?
+						TD_DELNUL : TD_NONE,
 				prefix, prefixlen);
 			if (obuf == origobuf)
 				addstats(stats, lines, sz);
@@ -1341,10 +1352,12 @@ send_parseheader:
 	del_hdr(ph);
 	if (mime_content == MIME_822) {
 		switch (action) {
+		case CONV_TOFLTR:
+			putc('\0', obuf);
+			/*FALLTHRU*/
 		case CONV_TODISP:
 		case CONV_QUOTE:
 		case CONV_TOSRCH:
-		case CONV_TOFLTR:
 			mime_content = MIME_TEXT;
 			mainhdr = 0;
 			goto send_parseheader;
@@ -1424,7 +1437,9 @@ send_parseheader:
 					action == CONV_QUOTE ?
 						TD_ISPR|TD_ICONV :
 						action == CONV_TOSRCH ?
-							TD_ICONV : TD_NONE,
+							TD_ICONV :
+						action == CONV_TOFLTR ?
+							TD_DELNUL : TD_NONE,
 					pbuf == qbuf ? prefix : NULL,
 					pbuf == qbuf ? prefixlen : 0);
 		if (ferror(pbuf)) {
